--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-data-grid": "^8.8.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tippyjs/react": "^4.2.6",
     "framer-motion": "^12.23.6",
